typo fix for Transportation fieldset legend

--- a/app/views/location/_form.html.haml
+++ b/app/views/location/_form.html.haml
@@ -57,7 +57,7 @@
     = f.input :training_url, :hint => 'If training is offered, website for more information', :required => false
 
   %fieldset
-    %legend Tranportaion
+    %legend Transportation
     = f.input :nearest_parking, :collection => ["Free", "Paid"], :required => false
     = f.input :nearest_parking_detail, :hint => "Details and directions for nearest parking lot", :required => false
     = f.input :public_transportation_detail, :hint => "Details and directions for nearest CTA or Metra stations or bus stops", :required => false
