--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -5,6 +5,8 @@
     = f.input :first_name
     = f.input :last_name
     = f.input :organization, hint:"Your organization or agency"
+    = f.label :location_id, "Associated location<br/>(If your location is not in this list, <a href='http://weconnectchicago.org/contact-us/'>contact us</a>)".html_safe
+    = f.select :location_id, locationNameList
     = f.input :twitter_handle, hint:"(optional)"
     = f.input :email, hint:"Enter your email address"
     = f.input :password, hint:"Enter password"
