--- a/app/views/admins/edit.html.haml
+++ b/app/views/admins/edit.html.haml
@@ -7,6 +7,8 @@
     = f.input :first_name
     = f.input :last_name
     = f.input :organization, hint:"Organization or agency"
+    = f.label :location_id, 'Location'
+    = f.select :location_id, locationNameList
     = f.input :email, hint:"Email address"
   = f.buttons do
     = f.commit_button :button_html => {:class => "btn btn-primary", :value => "Save"}
