--- a/app/views/errors/error_404.html.haml
+++ b/app/views/errors/error_404.html.haml
@@ -1,6 +1,6 @@
 .hero-unit
   %h1 404
-  %h3 Opps! Page not found.
+  %h3 Oops! Page not found.
   %p
     The page '#{@not_found_path}' could not be found.
   %p
