--- a/app/views/errors/error_500.html.haml
+++ b/app/views/errors/error_500.html.haml
@@ -1,6 +1,6 @@
 .hero-unit
   %h1 Error
-  %h3 Opps! There was an error.
+  %h3 Oops! There was an error.
   %p
     %a{:href => '#', :onclick => "history.back();"} Go back 
     and try again.
