adding verification token

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,6 +4,7 @@
     %meta(charset="utf-8")
     %meta(http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1")
     %meta(name="viewport" content="width=device-width, initial-scale=1.0")
+    %meta(name="google-site-verification" content="97Jq6z293C73QwTFJHshmEDl_6jI8bXvyRDm70scPmE")
     %title= content_for?(:title) ? yield(:title) + " - Connect Chicago" : "Connect Chicago"
     = csrf_meta_tags
     / Le HTML5 shim, for IE6-8 support of HTML elements
