switch entity to 'Place'

--- a/app/views/location/show.html.haml
+++ b/app/views/location/show.html.haml
@@ -10,7 +10,7 @@
 
 %script{:src => "/admin/admins/logged_in.js", :type => "text/javascript"}
 %script{:src => "/admin/admins/is_superadmin.js", :type => "text/javascript"}
-.row{:itemscope => '', :itemtype => "http://schema.org/Organization"}
+.row{:itemscope => '', :itemtype => "http://schema.org/Place"}
   .span7
     %h2
       %span{:itemprop => "name"}= @location[:organization_name]
